src/styles/components/_collapse.scss
.collapse-about-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 20px auto;
  max-width: 1400px;

  .collapsible {
    padding: 20px;

    @include devices(tablet-up) {
      width: 80%;
    }
    @include devices(mobile) {
      width: 90%;
    }
    @include devices(mobile-xs) {
      width: 318px;
    }
  }
}
.collapsible-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: $red;
  color: $white;
  padding: 0 10px;
  border-radius: 5px;
  height: 47px;
  max-width: 1023px;
}

.collapsible-toggle {
  background: $red;
  background-repeat: no-repeat;
  background-position: center;
  text-indent: -9999px;
  width: 24px;
  height: 13px;
  border: none;
  cursor: pointer;
}

.collapsible-toggle.open {
  background-image: url("../../assets/image/toggle-up.png");
}

.collapsible-toggle.closed {
  background-image: url("../../assets/image/toggle-down.png");
}

.collapsible-body {
  padding: 20px 10px;
  background: $grey;
  color: $red;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  max-width: 1023px;
}

.collapse-container {
  margin-bottom: 50px;
  @include devices(tablet-up) {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 10px;
    .collapsible {
      width: 450px;
    }
  }
  @include devices(tablet) {
    display: flex;
    flex-direction: row;
    gap: 20px;
    .collapsible {
      width: 350px;
    }
  }

  @include devices(mobile) {
    display: flex;
    gap: 20px;
    flex-direction: column;
    align-items: center;
    .collapsible {
      width: 340px;
    }
  }
  @include devices(mobile-xs) {
    display: flex;
    gap: 20px;
    flex-direction: column;
    align-items: center;
    .collapsible {
      width: 260px;
    }
  }
}

